--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -7,6 +7,7 @@
         <groupId>de.prgrm.quarkus-neo4j-ogm</groupId>
         <artifactId>quarkus-neo4j-ogm-parent</artifactId>
         <version>999-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>quarkus-neo4j-ogm</artifactId>
