--- a/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,9 +1,8 @@
-name: Neo4j Ogm
-#description: Do something useful.
+name: Neo4j OGM
+description: Integration of Neo4j OGM for Quarkus
 metadata:
-#  keywords:
-#    - neo4j-ogm
-#  guide: https://docs.quarkiverse.io/neo4j-ogm/dev/ # To create and publish this guide, see https://github.com/quarkiverse/quarkiverse/wiki#documenting-your-extension
-#  categories:
-#    - "miscellaneous"
-#  status: "preview"
+  keywords:
+    - neo4j
+    - ogm
+  categories:
+    - "data"
