--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.prgrm.quarkus-neo4j-ogm</groupId>
         <artifactId>quarkus-neo4j-ogm-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
