--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>de.prgrm.quarkus-neo4j-ogm</groupId>
         <artifactId>quarkus-neo4j-ogm-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
