--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -59,6 +59,23 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${compiler-plugin.version}</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <dependency>
+                            <groupId>de.prgrm.quarkus-neo4j-ogm</groupId>
+                            <artifactId>quarkus-neo4j-ogm</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+
             <!-- Failsafe for integration tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
